// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <RCTScrollView
            style={
              Object {
                "transform": Array [
                  Object {
                    "translateX": -1000,
                  },
                ],
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "width": 54.0546875,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 73.9375,
                      "overflow": "visible",
                      "width": 300,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "left": 0,
                        "position": "absolute",
                        "top": -2,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontFamily": "TimesModern-Regular",
                          "fontSize": 96.11875,
                          "lineHeight": 96.11875,
                        }
                      }
                    >
                      T
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "width": 235.9453125,
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "marginBottom": 20,
                        "paddingLeft": 10,
                        "paddingRight": 10,
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          Object {
                            "color": "#000000",
                            "fontFamily": "TimesDigitalW04",
                            "fontSize": 36,
                            "lineHeight": 52,
                          }
                        }
                      >
                        <Text>
                          his being Black History Month, last week
                        </Text>
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  <Text>
                    Some Link
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <Ad />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <PullQuote />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "paddingBottom": 25,
                "width": "100%",
              }
            }
          >
            <Video />
            <View>
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                    "paddingTop": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#696969",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 13,
                      "lineHeight": 20,
                    }
                  }
                >
                  This is video caption
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#9f0000",
                  "borderTopWidth": 2,
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 24,
                    "marginBottom": 20,
                  }
                }
              >
                Example title
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example bullet text
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    An example 
                    <Text>
                      link
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    More example text.
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example text 
                    <Text
                      style={
                        Object {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      this is bold 
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontStyle": "italic",
                        }
                      }
                    >
                      this is in italics.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 25,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 2
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <Ad />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 3
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 19,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 4
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 17,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 5
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 17,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 6
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with no content if content is set as null 1`] = `null`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <RCTScrollView
            style={
              Object {
                "transform": Array [
                  Object {
                    "translateX": -1000,
                  },
                ],
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "width": 63.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 87.4453125,
                      "overflow": "visible",
                      "width": 300,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "left": 0,
                        "position": "absolute",
                        "top": -2,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontFamily": "TimesModern-Regular",
                          "fontSize": 113.67890625,
                          "lineHeight": 113.67890625,
                        }
                      }
                    >
                      Q
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "width": 226.5,
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "marginBottom": 20,
                        "paddingLeft": 10,
                        "paddingRight": 10,
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          Object {
                            "color": "#000000",
                            "fontFamily": "TimesDigitalW04",
                            "fontSize": 36,
                            "lineHeight": 52,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "fontWeight": "bold",
                            }
                          }
                        >
                          <Text>
                            Some years ago I made the decision to take as a friend a woman who is very opinionated.
                          </Text>
                        </Text>
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  <Text>
                    When she does come to social events, she dominates.
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an article with heading tags 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 25,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 2
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 3
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`7. an article with link 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  <Text>
                    Jack Dorsey
                  </Text>
                </Text>
                <Text>
                   said today that while the company was unlikely to open its offices before September, almost all staff could now work permanently from wherever they want.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. an article with italic link 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  In his 2015 book on the tournaments, 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontStyle": "italic",
                      }
                    }
                  >
                    <Text>
                      Superforecasting
                    </Text>
                  </Text>
                </Text>
                <Text>
                  , Professor Tetlock said the most accurate predictors all used very similar methods. They used a historical “base rate” for predicting how likely an event was, adjusting constantly in the light of new information.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  <Text>
                    2 
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#006699",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 36,
                        "lineHeight": 52,
                        "textDecorationLine": "underline",
                      }
                    }
                  >
                    <Text>
                      Becoming by Michelle Obama
                    </Text>
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`10. an article with italic and normal text link 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  Family Action is one of two charities being supported by 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontStyle": "italic",
                      }
                    }
                  >
                    <Text>
                      The Times
                    </Text>
                  </Text>
                  <Text>
                    Coronavirus Charity Appeal
                  </Text>
                </Text>
                <Text>
                   to support people in greatest hardship under the restrictions. The second charity is The Big Issue Foundation.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontStyle": "italic",
                      }
                    }
                  >
                    <Text>
                      Conversations with Friends
                    </Text>
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`12. an article with text wrapped in inline element 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  They may have been improved by the controversy that ensued when Watson appeared on the cover of Vanity Fair to promote it, wearing a top that partially exposed her breasts. She rejected criticism that the pose was at odds with her claim to be a feminist. “Feminism is not a stick with which to beat other women. It’s about liberation. It’s about equality,” she said, adding: “I really don’t know what my tits have to do with it.” 
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`13. an article with paragraph with text and inline element 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  20. 
                </Text>
                <Text>
                  Participants’ names and general locations will be published if they are the winner of the Competition in accordance with regulatory requirements, both during this and future promotions by the Promoter or any associated or subsidiary company of News Corp UK & Ireland Limited.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`14. an article with inline inside a bold tag 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "bold",
                    }
                  }
                >
                  <Text>
                    Meera Menon, 15, 100min
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`15. an article starting with single quote 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <RCTScrollView
            style={
              Object {
                "transform": Array [
                  Object {
                    "translateX": -1000,
                  },
                ],
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "width": 74.46875,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 79.98046875,
                      "overflow": "visible",
                      "width": 300,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "left": 0,
                        "position": "absolute",
                        "top": -2,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontFamily": "TimesModern-Regular",
                          "fontSize": 103.974609375,
                          "lineHeight": 103.974609375,
                        }
                      }
                    >
                      ‘S
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "width": 215.53125,
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "marginBottom": 20,
                        "paddingLeft": 10,
                        "paddingRight": 10,
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          Object {
                            "color": "#000000",
                            "fontFamily": "TimesDigitalW04",
                            "fontSize": 36,
                            "lineHeight": 52,
                          }
                        }
                      >
                        <Text>
                          orting eyebrows?! Really? During a pandemic?!” This tweet landed in my Twitter feed after talking to Jenni Murray on BBC Radio 4 
                        </Text>
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`16. an article starting with double quote 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <RCTScrollView
            style={
              Object {
                "transform": Array [
                  Object {
                    "translateX": -1000,
                  },
                ],
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "width": 90.46484375,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 79.98046875,
                      "overflow": "visible",
                      "width": 300,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "left": 0,
                        "position": "absolute",
                        "top": -2,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontFamily": "TimesModern-Regular",
                          "fontSize": 103.974609375,
                          "lineHeight": 103.974609375,
                        }
                      }
                    >
                      “S
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "width": 199.53515625,
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "marginBottom": 20,
                        "paddingLeft": 10,
                        "paddingRight": 10,
                      }
                    }
                  >
                    <View>
                      <Text
                        style={
                          Object {
                            "color": "#000000",
                            "fontFamily": "TimesDigitalW04",
                            "fontSize": 36,
                            "lineHeight": 52,
                          }
                        }
                      >
                        <Text>
                          orting eyebrows?! Really? During a pandemic?!” This tweet landed in my Twitter feed after talking to Jenni Murray on BBC Radio 4 
                        </Text>
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`17. an article skeleton with responsive items 1`] = `
<View>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#f0f0f0",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "visible",
            "width": undefined,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleImage />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  <Text>
                    Some Link
                  </Text>
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "lineHeight": 52,
                  }
                }
              >
                <Text>
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <Ad />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <PullQuote />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "paddingBottom": 25,
                "width": "100%",
              }
            }
          >
            <Video />
            <View>
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                    "paddingTop": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#696969",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 13,
                      "lineHeight": 20,
                    }
                  }
                >
                  This is video caption
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#9f0000",
                  "borderTopWidth": 2,
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                  "paddingHorizontal": 24,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 24,
                    "marginBottom": 20,
                  }
                }
              >
                Example title
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example bullet text
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    An example 
                    <Text>
                      link
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    More example text.
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#9f0000",
                        "height": 6,
                        "top": 2,
                        "width": 6,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example text 
                    <Text
                      style={
                        Object {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      this is bold 
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontStyle": "italic",
                        }
                      }
                    >
                      this is in italics.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 25,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 2
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <Ad />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 3
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 19,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 4
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 17,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 5
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 17,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  This is heading 6
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "visible",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
